--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <source src="../imgs/audio1.mp3" type="audio/mp3">
       </audio> -->
       <div class="content">
-        <h1>Bem-vindo ao meu Portfólio</h1>
+        <h1>Olá, sou o criador desta página.</h1>
           <p class="paragrafos_centro">Ser programador é mais do que escrever código, é resolver problemas e criar inovações. Minha missão é trazer soluções criativas e otimizadas para cada projeto que enfrento. A tecnologia está sempre em evolução, e eu também. #PrograçãoÉTodoDia</p>
       </div>
     </div>
