--- a/html/login.html
+++ b/html/login.html
@@ -16,7 +16,7 @@
       <button
         class="button_login"
         onclick="window.location.href='../index.html';">
-        <strong>Home</strong>
+        <strong>Criador</strong>
       </button>
 
       <img class="logo" 
